# cracked-mc-launcher-by-DS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/database/: Cargo.toml
crates/database/migrations/: 0001_init.sql
crates/database/src/: error.rs  lib.rs  models.rs  repository.rs
crates/downloads/: Cargo.toml
crates/downloads/src/: lib.rs  manager.rs  progress.rs  task.rs  verify.rs
crates/minecraft/: Cargo.toml
crates/minecraft/src/: assets.rs  error.rs  fabric.rs  java.rs  launch.rs  lib.rs  libraries.rs  manifest.rs  os_match.rs  paths.rs  version_detail.rs
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/components/instances/: CreateInstanceModal.tsx  InstanceCard.tsx  LaunchStatusPanel.tsx
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx  TitleBar.tsx
frontend/src/components/shared/: Button.tsx  ConfirmDialog.tsx  Feedback.tsx  FormControls.tsx  Modal.tsx
frontend/src/hooks/: useInstances.ts  useLaunch.ts
frontend/src/lib/: tauri.ts  utils.ts
frontend/src/pages/: Downloads.tsx  Home.tsx  InstanceDetail.tsx  InstanceSettings.tsx  Library.tsx  Settings.tsx
frontend/src/state/: instances.ts  launch.ts  settings.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: fabric.rs  instances.rs  launch.rs  mod.rs  settings.rs  versions.rs
