[package]
name = "database"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
