[package]
name = "downloads"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
