[package]
name = "minecraft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
downloads = { workspace = true }
uuid = { workspace = true }
md-5 = "0.10"
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
